@@ -2,6 +2,8 @@
 v5.0-git
 --------
 
+[mms] Catch flag changes from other IMAP clients when refreshing if CONDSTORE
+      is available on the IMAP server (DIMP).
 [mms] Improved forwarding options.
 [mms] Add support for LIST-STATUS IMAP extension.
 [mms] Add hook to allow determination of compose attachments MIME type.
